Make the profile picture centered on screen

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="view hm-black-strong" id="profile">
         <!--Intro content-->
         <div class="full-bg-img flex-center ">
-            <ul>
+            <ul class="text-xs-center">
                 <li class="flex-center">
                     <img class="img-thumbnail wow fadeIn" src="img/profile_pics.png" alt="user">
                 </li>
