Update my github link

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <a class="btn-floating btn-small twitter" target="_blank" href="https://twitter.com/Emmakoko96"><i class="fa fa-twitter"></i></a>
                     <a class="btn-floating btn-small google-plus" target="_blank" href="https://plus.google.com/109114857528182559021"><i class="fa fa-google-plus"></i></a>
                     <a class="btn-floating btn-small linkedin" target="_blank" href="https://www.linkedin.com/in/kehinde-emmanuel-81934552"><i class="fa fa-linkedin"></i></a>
-                    <a class="btn-floating btn-small github" target="_blank" href="https://github.com/emmakoko96"><i class="fa fa-github"></i></a>
+                    <a class="btn-floating btn-small github" target="_blank" href="https://github.com/emmanuelkehinde"><i class="fa fa-github"></i></a>
                 </li>
             </ul>
         </div>
