--- a/index.html
+++ b/index.html
@@ -779,13 +779,13 @@
                     </form>
 
                     <div class="text-xs-center">
-                        <div ng-if="statusPos" class="alert alert-success text-xs-left wow fadeIn" role="alert">
+                        <div ng-if="statusPos" class="alert alert-success text-xs-left" role="alert">
                             <span class="fa fa-check" aria-hidden="true"></span>
                             <span class="sr-only">Error:</span>
                             {{statusPos}}
                             <button type="button" class="close pull-right" aria-label="Close" data-dismiss="alert"><span aria-hidden="true">&times;</span></button>
                         </div>
-                        <div ng-if="statusNeg" class="alert alert-danger text-xs-left wow fadeIn" role="alert">
+                        <div ng-if="statusNeg" class="alert alert-danger text-xs-left" role="alert">
                             <span class="fa fa-exclamation-triangle" aria-hidden="true"></span>
                             <span class="sr-only">Error:</span>
                             {{statusNeg}}
@@ -837,6 +837,17 @@
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/controllers.js"></script>
 
+    <!--GOOGLE ANALYTICS-->
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-88905696-1', 'auto');
+        ga('send', 'pageview');
+
+    </script>
 
 </body>
 
