--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 
     <title>Kehinde Emmanuel</title>
 
+    <!--Title Icon-->
+    <link rel="apple-touch-icon" sizes="144x144" href="img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="img/favicon/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="img/favicon/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="img/favicon/manifest.json">
+    <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="theme-color" content="#ffffff">
+
+
+
     <!-- Font Awesome -->
     <link rel="stylesheet" href="css/font-awesome.min.css">
 
