Change the wow animation type

--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
                 <!--First columnn-->
                 <div class="col-md-3 col-sm-6">
                     <!--Card-->
-                    <div class="card hoverable wow fadeInUp" data-wow-duration="1.2s">
+                    <div class="card hoverable wow fadeIn" data-wow-duration="2.5s">
 
                         <!--Card image-->
                         <div class="view overlay hm-white-slight">
@@ -617,7 +617,7 @@
                 <!--Second columnn-->
                 <div class="col-md-3 col-sm-6">
                     <!--Card-->
-                    <div class="card hoverable wow fadeInUp" data-wow-duration="1.4s">
+                    <div class="card hoverable wow fadeIn" data-wow-duration="3.0s">
 
                         <!--Card image-->
                         <div class="view overlay hm-white-slight">
@@ -649,7 +649,7 @@
                 <!--Third columnn-->
                 <div class="col-md-3 col-sm-6">
                     <!--Card-->
-                    <div class="card hoverable wow fadeInUp" data-wow-duration="1.6s">
+                    <div class="card hoverable wow fadeIn" data-wow-duration="3.5s">
 
                         <!--Card image-->
                         <div class="view overlay hm-white-slight">
@@ -681,7 +681,7 @@
                 <!--Fourth columnn-->
                 <div class="col-md-3 col-sm-6">
                     <!--Card-->
-                    <div class="card hoverable wow fadeInUp" data-wow-duration="1.8s">
+                    <div class="card hoverable wow fadeIn" data-wow-duration="3.5s">
 
                         <!--Card image-->
                         <div class="view overlay hm-white-slight">
