--- a/index.html
+++ b/index.html
@@ -700,8 +700,8 @@
                             <h4 class="card-title">Welfare</h4>
                             <hr>
                             <!--Text-->
-                            <p class="card-text">An android application that facilitates proper follow-up and management
-                                of members of a church, by providing a database management system for its user.</p>
+                            <p class="card-text">An android application that facilitates proper follow-up and management of members of a church, by providing a database management system for its user.</p>
+                            <a href="<a href='https://play.google.com/store/apps/details?id=com.kehinde.welfare&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'/></a>"></a>
                         </div>
                         <!--/.Card content-->
 
