Add the badge for welfare app

--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
                         <!--Card content-->
                         <div class="card-block text-xs-center">
                             <!--Title-->
-                            <h4 class="card-title">Welfare</h4>
+                            <h4 class="card-title">CACSA OAU Welfare</h4>
                             <hr>
                             <!--Text-->
                             <p class="card-text">An android application that facilitates proper follow-up and management of members of a church, by providing a database management system for its user.</p>
