--- a/index.html
+++ b/index.html
@@ -685,14 +685,14 @@
 
                         <!--Card image-->
                         <div class="view overlay hm-white-slight">
-                            <img src="img/projects/welfare.jpg" class="img-fluid" alt="">
+                            <img src="img/projects/welfare_final.jpg" class="img-fluid" alt="">
                             <a>
                                 <div class="mask"></div>
                             </a>
                         </div>
                         <!--/.Card image-->
 
-                        <a class="btn-floating btn-small fixed-action-btn-project pull-right red"><i class="fa fa-arrow-right"></i></a>
+                        <a target="_blank"  href="https://play.google.com/store/apps/details?id=com.kehinde.welfare" class="btn-floating btn-small fixed-action-btn-project pull-right red"><i class="fa fa-arrow-right"></i></a>
 
                         <!--Card content-->
                         <div class="card-block text-xs-center">
@@ -701,7 +701,9 @@
                             <hr>
                             <!--Text-->
                             <p class="card-text">An android application that facilitates proper follow-up and management of members of a church, by providing a database management system for its user.</p>
-                            <a target="_blank"  href="<a href='https://play.google.com/store/apps/details?id=com.kehinde.welfare&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'/></a>"></a>
+                            <a target="_blank"  href="https://play.google.com/store/apps/details?id=com.kehinde.welfare&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1">
+
+                            <img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'/></a>
                         </div>
                         <!--/.Card content-->
 
