--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="full-bg-img flex-center ">
             <ul class="text-xs-center">
                 <li class="flex-center">
-                    <img class="img-thumbnail wow fadeIn" src="img/profile_pics.png" alt="user">
+                    <img class="img-thumbnail wow fadeIn" src="img/profile_pics.jpg" alt="user">
                 </li>
                 <li>
                     <h1 class="h1-responsive wow fadeIn">Kehinde Emmanuel</h1></li>
