--- a/index.html
+++ b/index.html
@@ -727,8 +727,8 @@
         </div>
 
         <!--Section: Articles-->
-        <section>
-           <p class="lead text-xs-center">No Articles Presently</p>
+        <section class="article_list">
+           <p class="lead text-xs-center"><a href="https://medium.com/@emmanuelkehinde/nigerian-android-developers-we-can-do-more-368a158fe292" target="_blank">Nigerian Android developers; we can do more!</a></p>
         </section>
         <!--Section: Articles-->
 
