Add article and Change Projects min height

--- a/index.html
+++ b/index.html
@@ -837,9 +837,16 @@
 
         <!--Section: Articles-->
         <section class="article_list">
+            <p class="lead text-xs-center"><a href="https://medium.com/@emmanuelkehinde/my-experience-developing-the-twittasave-app-lessons-learnt-2c481da623f" target="_blank">My experience developing the TwittaSave app; lessons learnt.</a></p>
+        </section>
+        <!--Section: Articles-->
+
+        <!--Section: Articles-->
+        <section class="article_list">
            <p class="lead text-xs-center"><a href="https://medium.com/@emmanuelkehinde/nigerian-android-developers-we-can-do-more-368a158fe292" target="_blank">Nigerian Android developers; we can do more!</a></p>
         </section>
         <!--Section: Articles-->
+
 
     </div>
     <!--/ Main container-->
