Add Top Nigerian Devs and Scotch article

--- a/index.html
+++ b/index.html
@@ -790,7 +790,38 @@
                 <!--Second columnn-->
 
                 <!--Third columnn-->
-                 <div class="col-md-3 col-sm-6">
+                <div class="col-md-3 col-sm-6">
+                    <!--Card-->
+                    <div class="card hoverable wow fadeIn" data-wow-duration="2.5s">
+
+                        <!--Card image-->
+                        <div class="view overlay hm-white-slight">
+                            <img src="img/projects/s5.jpg" class="img-fluid" alt="">
+                            <a>
+                                <div class="mask"></div>
+                            </a>
+                        </div>
+                        <!--/.Card image-->
+
+                        <a target="_blank" href="https://github.com/emmanuelkehinde/top-nigerian-devs" class="btn-floating btn-small fixed-action-btn-project pull-right red"><i class="fa fa-arrow-right"></i></a>
+
+                        <!--Card content-->
+                        <div class="card-block text-xs-center">
+                            <!--Title-->
+                            <h4 class="card-title">Top Nigerian Developers</h4>
+                            <hr>
+                            <!--Text-->
+                            <p class="card-text">A MEAN stack app that shows a list of Top Nigerian Developers based on various Programming languages.</p>
+                        </div>
+                        <!--/.Card content-->
+
+                    </div>
+                    <!--/.Card-->
+                </div>
+                <!--Third columnn-->
+
+                <!--Fourth columnn-->
+                <div class="col-md-3 col-sm-6">
                     <!--Card-->
                     <div class="card hoverable wow fadeIn" data-wow-duration="2.5s">
 
@@ -811,17 +842,13 @@
                             <h4 class="card-title">AdminPage</h4>
                             <hr>
                             <!--Text-->
-                            <p class="card-text">An AdminPage template that can be incorporated into any website for the monitoring and management of a website.</p>
+                            <p class="card-text">An AdminPage template that can be incorporated into any website for the monitoring and management of a website. Built using AngularJS.</p>
                         </div>
                         <!--/.Card content-->
 
                     </div>
                     <!--/.Card-->
                 </div>
-                <!--Third columnn-->
-
-                <!--Fourth columnn-->
-                
                 <!--Fourth columnn-->
 
             </div>
@@ -834,6 +861,12 @@
         <div class="divider-new" id="articles">
             <h2 class="h2-responsive">Articles</h2>
         </div>
+
+        <!--Section: Articles-->
+        <section class="article_list">
+            <p class="lead text-xs-center"><a href="https://scotch.io/@emmanuelkehinde/learn-to-build-a-mean-stack-app-that-displays-a-list-of-top-nigerian-developers" target="_blank">Learn to build a MEAN stack app that displays a list of Top Nigerian Developers.</a></p>
+        </section>
+        <!--Section: Articles-->
 
         <!--Section: Articles-->
         <section class="article_list">
