Changed case for twitter profile url
Alaye, hacktoberfest ni o. Ko si nkan to kan mi pelu 'beautiful website' e

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </li>
                 <li class="socials">
                     <a class="btn-floating btn-small facebook" target="_blank" href="https://www.facebook.com/kehinde.emmanuel.79"><i class="fa fa-facebook"></i></a>
-                    <a class="btn-floating btn-small twitter" target="_blank" href="https://twitter.com/Emmakoko96"><i class="fa fa-twitter"></i></a>
+                    <a class="btn-floating btn-small twitter" target="_blank" href="https://twitter.com/emmakoko96"><i class="fa fa-twitter"></i></a>
                     <a class="btn-floating btn-small google-plus" target="_blank" href="https://plus.google.com/109114857528182559021"><i class="fa fa-google-plus"></i></a>
                     <a class="btn-floating btn-small linkedin" target="_blank" href="https://www.linkedin.com/in/kehinde-emmanuel-81934552"><i class="fa fa-linkedin"></i></a>
                     <a class="btn-floating btn-small github" target="_blank" href="https://github.com/emmanuelkehinde"><i class="fa fa-github"></i></a>
