Update name and some other info

--- a/index.html
+++ b/index.html
@@ -85,15 +85,15 @@
                     <img class="img-thumbnail wow fadeIn" src="img/profile_picss.jpg" alt="user">
                 </li>
                 <li>
-                    <h1 class="h1-responsive wow fadeIn">Kehinde Emmanuel</h1></li>
+                    <h1 class="h1-responsive wow fadeIn">Emmanuel Kehinde</h1></li>
                 <li>
-                    <p>Software Developer</p>
+                    <p>Software Engineer</p>
                 </li>
                 <li class="socials">
                     <a class="btn-floating btn-small facebook" target="_blank" href="https://www.facebook.com/kehinde.emmanuel.79"><i class="fa fa-facebook"></i></a>
                     <a class="btn-floating btn-small twitter" target="_blank" href="https://twitter.com/emmakoko96"><i class="fa fa-twitter"></i></a>
                     <a class="btn-floating btn-small google-plus" target="_blank" href="https://plus.google.com/109114857528182559021"><i class="fa fa-google-plus"></i></a>
-                    <a class="btn-floating btn-small linkedin" target="_blank" href="https://www.linkedin.com/in/kehinde-emmanuel-81934552"><i class="fa fa-linkedin"></i></a>
+                    <a class="btn-floating btn-small linkedin" target="_blank" href="https://www.linkedin.com/in/emmanuel-kehinde-81934552/"><i class="fa fa-linkedin"></i></a>
                     <a class="btn-floating btn-small github" target="_blank" href="https://github.com/emmanuelkehinde"><i class="fa fa-github"></i></a>
                 </li>
             </ul>
@@ -118,7 +118,7 @@
 
         <!--Section: Skills-->
         <section class="text-xs-center">
-            <p>I am a creative Software Developer with experience in building applications cutting across Mobile and Web development.</p>
+            <p>I am a creative Software Engineer with experience in building applications cutting across Mobile and Web development.</p>
             <p>I have been able to acquire, and still in the process of acquiring several skills needed for the actualization of my vision in the tech world.</p>
             <!--<p class="hidden-sm-down">&nbsp;</p>-->
             <div class="row">
