--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="google-site-verification" content="syhk3SRs0cEeFparIEc9W19hwWJoSqtW0vfARw2zWGw" />
 
-    <title>Kehinde Emmanuel</title>
+    <title>Emmanuel Kehinde</title>
 
     <!--Title Icon-->
     <link rel="apple-touch-icon" sizes="144x144" href="apple-touch-icon.png">
